# serialstreamxx

./: Makefile.am  configure.ac
src/: serialstream.hpp
tests/: test1.cpp  test2.cpp
